--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,13 @@ body {
 /* Home.js styles*/
 .Logo {
   background-color: black;
-  color: white;
   padding: 10px;
   text-align: center;
+}
+
+.Logo a {
+  color: white;
+  text-decoration: none;
 }
 
 .MainContentWrapper {
@@ -26,9 +30,17 @@ body {
 }
 
 .MainContentWrapper img {
+  box-shadow: 10px 10px 5px black;
   height: 400px;
   margin-bottom: 5%;
   width: 250px;
+}
+
+.MainContentWrapper img:hover {
+  box-shadow: 5px 5px 3px black;
+  transform: translate(5px, 5px);
+  transition-duration: 0.6s;
+  transition-property: transform box-shadow;
 }
 
 /* MovieCard.js styles */
